test/invalid/line_directive_nonfile.d
//T error: line_directive_nonfile.d:4:9:
//T error: Expected a file name as a string, not `42`.

#line 42 42
